# microbit-projects

./: README.md
bsp-embassy/accelerometer-print/: Cargo.toml
bsp-embassy/accelerometer-print/src/: main.rs
bsp-embassy/background-tasks/: Cargo.toml
bsp-embassy/background-tasks/src/: main.rs
bsp-embassy/clap2smile/: Cargo.toml
bsp-embassy/clap2smile/src/: main.rs
bsp-embassy/ldr-dracula/: Cargo.toml
bsp-embassy/ldr-dracula/src/: main.rs
bsp-embassy/led-scroll/: Cargo.toml
bsp-embassy/led-scroll/src/: main.rs
bsp-embassy/mic-clap/: Cargo.toml
bsp-embassy/mic-clap/src/: main.rs
bsp-embassy/mic-sound-level/: Cargo.toml
bsp-embassy/mic-sound-level/src/: main.rs
bsp-embassy/play-song/: Cargo.toml
bsp-embassy/play-song/src/: main.rs
bsp-embassy/play-tone/: Cargo.toml
bsp-embassy/play-tone/src/: main.rs
bsp-embassy/shake-detect/: Cargo.toml
bsp-embassy/shake-detect/src/: main.rs
bsp/blinky/: Cargo.toml
bsp/blinky/src/: main.rs
bsp/led-char/: Cargo.toml
bsp/led-char/src/: main.rs
bsp/led-matrix/: Cargo.toml
bsp/led-matrix/src/: main.rs
bsp/led-scroll/: Cargo.toml
bsp/led-scroll/src/: main.rs
bsp/logo-touch/: Cargo.toml
bsp/logo-touch/src/: main.rs
bsp/smiley-buttons/: Cargo.toml
bsp/smiley-buttons/src/: main.rs
bsp/touch-input/: Cargo.toml
bsp/touch-input/src/: main.rs
embassy-button-led/: Cargo.toml  memory.x
embassy-button-led/src/: led.rs  main.rs
hal-embassy/hello-ble/: Cargo.toml  memory.x
hal-embassy/hello-ble/src/: main.rs  service.rs
hal-embassy/hello-ble/src/ble/: adv.rs  config.rs  mod.rs
hal-embassy/temperature/: Cargo.toml
hal-embassy/temperature/src/: main.rs
hal/led-blinky/: Cargo.toml
hal/led-blinky/src/: main.rs
led-roulette/: Cargo.toml
led-roulette/src/: main.rs
text-printer/: Cargo.toml  Embed.toml
text-printer/src/text/: mod.rs
text_printer/: Cargo.toml
text_printer/src/: main.rs
text_printer/src/text/: char_map.rs
