[package]
name = "text_printer"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
heapless = "0.8.0"
microbit-v2 = "0.15.0"
nrf52833-hal = "0.18.0"
nrf52833-pac = "0.12.2"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
