[package]
edition = "2024"
name = "hello-ble"
version = "0.1.0"
authors = ["ImplFerris <implferris@proton.me>"]
resolver = "2"

[[bin]]
name = "hello-ble"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.3", features = [
    "defmt",
    "nrf52833",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-executor = { version = "0.7", features = [
    "task-arena-size-1024",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

microbit-bsp = { git = "https://github.com/lulf/microbit-bsp", rev = "9c7d52e" }

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice/", rev = "5949a5b", features = [
    "ble-peripheral",
    "ble-gatt-server",
    "s113",
    "nrf52833",
    # "critical-section-impl",
    "defmt",
] }
nrf-softdevice-s113 = { version = "0.1.2" }
static_cell = "2"
heapless = "0.8"
futures = { version = "0.3.29", default-features = false }


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
